--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-<h2> Hello,Rails </h2>
+<h2> First app using Rails </h2>
 <%= link_to 'My Blog', controller: 'articles' %>
